# million-songs-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  cleanup.sh  cloudbuild.yaml  docker-compose.yml  pyproject.toml  setup.sh  task.md
.github/workflows/: ci.yml
dashboard/: app.py  iso3_countries.csv
dashboard/.streamlit/: config.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: mrt_audio_features_by_year.sql  mrt_audio_features_by_year_genre.sql  mrt_genre_audio_fingerprints.sql  mrt_genre_by_location.sql  mrt_lyrical_diversity_by_genre.sql  mrt_top_words_by_genre.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_genres.sql  stg_lyrics.sql  stg_tracks.sql
flows/: _cloud.py  ingest.py  load_bq.py  pipeline.py  run_dbt.py  transform.py
jobs/: ingest.py  transform.py
notebooks/: explore_data.py
notebooks/.ipynb_checkpoints/: explore_data-checkpoint.py
scripts/: init.sh
spark/: raw_to_parquet.py
terraform/: main.tf  variables.tf
tests/: test_cloud_run.py  test_ingest.py  test_transform_lyrics.py
