[project]
name = "million-songs-pipeline"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-cloud-storage>=2.4,<3.2",
    "h5py>=3.16.0",
    "griffe<1.15",
    "prefect==3.6.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "db-dtypes>=1.4.2",
    "dbt-bigquery>=1.11.1",
    "google-cloud-bigquery>=3.41.0",
    "plotly>=6.7.0",
    "tidepool-theme>=0.2.0",
    "streamlit>=1.56.0",
    "reverse-geocoder>=1.5.1",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
    "notebook>=7.5.5",
]
